--- a/actualites.html
+++ b/actualites.html
@@ -37,7 +37,7 @@
             <img
               src="assets/images/logos/logo1.png"
               class="logo-image img-fluid"
-              alt="amp"
+              alt="logoAmp"
             />
           </a>
           <!-- bouton de navigation sur mobile -->
@@ -138,7 +138,7 @@
                     <img
                       src="assets/images/produits/1.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="lion"
                   /></a>
                 </div>
 
@@ -151,7 +151,7 @@
                     <img
                       src="assets/images/produits/5.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="balarou"
                   /></a>
                 </div>
 
@@ -164,7 +164,7 @@
                     <img
                       src="assets/images/produits/2.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="coulirou"
                   /></a>
                 </div>
 
@@ -177,7 +177,7 @@
                     <img
                       src="assets/images/produits/3.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="thon"
                   /></a>
                 </div>
 
@@ -190,7 +190,7 @@
                     <img
                       src="assets/images/produits/7.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="bourse"
                   /></a>
                 </div>
 
@@ -203,7 +203,7 @@
                     <img
                       src="assets/images/produits/4.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="carangue"
                   /></a>
                 </div>
               </div>
@@ -211,7 +211,7 @@
           </div>
           <!-- / .row  -->
           <div id="poisson">
-            <img src="assets/images/logos/1.png" alt="Poisson">                  
+            <img src="assets/images/logos/1.png" alt="Poisson" />
           </div>
         </div>
       </section>
@@ -245,15 +245,16 @@
                     <img
                       src="assets/images/activites/3.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="reunion"
                     />
                   </a>
                 </div>
 
                 <div class="custom-block-info">
-                  <h5 class="mb-2">Actu 1</h5>
+                  <h5 class="mb-2">Segmentation de la pêche</h5>
 
-                  <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                  <p class="mb-0">La pêche professionnelle est une activité de « cueillette » d’une ressource vivante renouvelable.
+                    Une bonne gestion des ressources halieutiques garantit la durabilité de la ressource et donc de l’activité.</p>
 
                   <div
                     class="custom-block-bottom d-flex justify-content-between mt-3"
@@ -287,15 +288,15 @@
                     <img
                       src="assets/images/actions/16.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="nettoyage"
                     />
                   </a>
                 </div>
 
                 <div class="custom-block-info">
-                  <h5 class="mb-2">Actu 2</h5>
+                  <h5 class="mb-2">Nettoyage des fonds marins</h5>
 
-                  <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                  <p class="mb-0">Le nettoyage des fonds marins en collaboration avec les marins pêcheurs professionnels est une initiative importante pour la préservation de l'environnement marin.</p>
 
                   <div
                     class="custom-block-bottom d-flex justify-content-between mt-3"
@@ -329,15 +330,15 @@
                     <img
                       src="assets/images/actions/20.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="messe"
                     />
                   </a>
                 </div>
 
                 <div class="custom-block-info">
-                  <h5 class="mb-2">Actu 3</h5>
+                  <h5 class="mb-2">Messe des marins</h5>
 
-                  <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                  <p class="mb-0">Beaucoup de marins pêcheurs estiment que leur métier comporte des risques considérables. La messe est aussi une occasion de prier pour la sécurité en mer, de demander la protection des saints patrons des marins, et d'honorer ceux qui ont perdu la vie en mer.</p>
 
                   <div
                     class="custom-block-bottom d-flex justify-content-between mt-3"
@@ -404,12 +405,12 @@
                     Le métier de marin pêcheur présente plusieurs variantes en
                     fonction de divers facteurs :
 
-                    <br />Les techniques de pêche utilisées, telles que les
-                    filets, les chaluts, les sennes, etc. <br />La durée des
-                    sorties en mer, allant de quelques heures à plusieurs
-                    semaines. <br />La taille du navire, qui peut être petite ou
-                    de grande taille. <br />Les zones de pêche, de la côte
-                    française à des eaux lointaines. <br />Les différentes
+                    <br />- Les techniques de pêche utilisées, telles que les
+                    filets, les sennes, la pêche au DCP dit dispositif de concentration de poissons etc. <br />La durée des
+                    sorties en mer, allant d'une demi-journée à plusieurs
+                    jours. <br />- Le navire, qui peut être petite ou
+                    de grande taille définissant la catégorie de navigation. <br />- Les zones de pêche, de nos côtes
+                    à des eaux lointaines. <br />- Les différentes
                     fonctions à bord, influençant les responsabilités et les
                     tâches. <br /><br />En ce qui concerne la rémunération, la
                     plupart des marins pêcheurs sont payés en fonction de la
@@ -431,21 +432,19 @@
                   </h5>
                   <p class="mb-0">
                     Le métier de marin pêcheur comprend plusieurs fonctions
-                    essentielles à bord d'un navire. Les membres d'équipage clés
-                    sont le patron ou capitaine, le matelot et le mécanicien.
+                    essentielles à bord d'un navire. <br>Les membres d'équipage clés
+                    sont le patron ou capitaine, le matelot et le mécanicien :
 
-                    <br />Le matelot participe à toutes les étapes de la pêche,
+                    <br />- Le matelot participe à toutes les étapes de la pêche,
                     de la préparation des moteurs au traitement des captures. Il
                     s'occupe également de l'entretien du navire.
 
-                    <br />Le patron ou capitaine gère les campagnes de pêche,
+                    <br />- Le patron ou capitaine gère les campagnes de pêche,
                     veille à la sécurité de l'équipage, supervise l'entretien du
-                    navire et peut être un chef d'entreprise dans le cas de la
-                    pêche artisanale.
+                    navire et gère le traitement et la conservation des captures.
 
-                    <br />Le mécanicien est responsable de la maintenance des
-                    moteurs et des équipements de pêche, ainsi que du traitement
-                    et de la conservation des captures.
+                    <br />- Le mécanicien est responsable de la maintenance des
+                    moteurs et des équipements de pêche.
 
                     <br /><br />Ces fonctions varient en fonction de la taille
                     du navire et des techniques de pêche utilisées.
@@ -467,7 +466,7 @@
                       <img
                         src="assets/images/actions/17.jpg"
                         class="custom-block-image img-fluid"
-                        alt=""
+                        alt="formation"
                       />
                     </a>
                   </div>
@@ -475,9 +474,9 @@
 
                 <div class="custom-block-info">
                   <h5 class="mb-2">
-                    <a href="#"> Recyclages </a>
+                    <a href="#"> Formations / Recyclages </a>
                   </h5>
-                  <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                  <p class="mb-0">Les recyclages et les formations sont essentiels pour améliorer la sécurité en mer, promouvoir la durabilité de la pêche, et maintenir l'industrie de la pêche à jour avec les dernières pratiques et technologies. Ils contribuent également à l'amélioration des conditions de travail des marins et à la préservation des ressources marines pour les générations futures.</p>
                 </div>
               </div>
             </div>
@@ -495,7 +494,7 @@
                       <img
                         src="assets/images/actions/18.jpg"
                         class="custom-block-image img-fluid"
-                        alt=""
+                        alt="experience"
                       />
                     </a>
                   </div>
@@ -505,7 +504,7 @@
                   <h5 class="mb-2">
                     <a href="#"> Experiences / Anecdotes </a>
                   </h5>
-                  <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                  <p class="mb-0">Les expériences et anecdotes des marins pêcheurs professionnels contribuent à la richesse de la culture maritime. Ces récits offrent un aperçu de la vie en mer, de ses défis et de ses récompenses sans oublier les rituels avant de prendre la mer, tout en préservant la mémoire de cette industrie essentielle pour les communautés côtières du monde entier.</p>
                 </div>
               </div>
             </div>
@@ -516,95 +515,95 @@
 
     <!-- TOP -->
     <div id="scroll-to-top-button">
-      <img src="assets/images/logos/top.png" alt="Retour en haut" />
+      <img src="assets/images/logos/top.png" alt="boutonTop" />
     </div>
 
     <!-- FOOTER -->
     <footer class="site-footer">
       <!-- partenaires -->
-      <div class="container pb-2">
+      <div class="container pb-4">
         <div class="row">
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/copem.png"
-              alt="Image 1"
+              alt="logoCopem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/logopnm.jpg"
-              alt="Image 6"
+              alt="logoPnm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/assomer.png"
-              alt="Image 2"
+              alt="logoAssomer"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/capnord.png"
-              alt="Image 3"
+              alt="logoCapnord"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/ctm.png"
-              alt="Image 4"
+              alt="logoCtm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/mairie.png"
-              alt="Image 5"
+              alt="logoMairie"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dla.png"
-              alt="Image 6"
+              alt="logoDla"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/crpmem.png"
-              alt="Image 6"
+              alt="logoCrpmem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/efpma.png"
-              alt="Image 6"
+              alt="logoEfpma"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dm.png"
-              alt="Image 6"
+              alt="logoDm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/cea.png"
-              alt="Image 6"
+              alt="logoCea"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="assets/images/logos/ctmseul.png"
-              alt="Image 6"
+              src="assets/images/logos/ifremer.png"
+              alt="logoIfremer"
               class="img-fluid small-image"
             />
           </div>
