--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <img
               src="assets/images/logos/logo1.png"
               class="logo-image img-fluid"
-              alt="amp"
+              alt="logoAmp"
             />
           </a>
           <!-- bouton de navigation sur mobile -->
@@ -151,26 +151,9 @@
 
             <div class="col-lg-12 col-12 mb-2 mb-lg-5">
               <div class="custom-block d-flex">
-                <div class="">
-                  <div class="custom-block-icon-wrap">
-                    <div class="section-overlay"></div>
-                    <a href="actions.html" class="custom-block-image-wrap">
-                      <img
-                        src="assets/images/infos/m1.png"
-                        class="custom-block-image img-fluid"
-                        alt=""
-                      />
-                    </a>
-                  </div>
-
-                  <div class="mt-2">
-                    <a href="#" class="btn custom-btn"> Président </a>
-                  </div>
-                </div>
-
                 <div class="custom-block-info">
                   <h5 class="mb-2">
-                    <a href="actions.html">
+                    <a href="contact.html">
                       <b>Chers visiteurs,</b>
                     </a>
                   </h5>
@@ -344,96 +327,96 @@
 
     <!-- TOP -->
     <div id="scroll-to-top-button">
-      <img src="assets/images/logos/top.png" alt="Retour en haut" />
+      <img src="assets/images/logos/top.png" alt="boutonTop" />
     </div>
 
     <!-- FOOTER -->
 
     <footer class="site-footer">
       <!-- partenaires -->
-      <div class="container pb-2">
+      <div class="container pb-4">
         <div class="row">
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/copem.png"
-              alt="Image 1"
+              alt="logoCopem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/logopnm.jpg"
-              alt="Image 6"
+              alt="logoPnm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/assomer.png"
-              alt="Image 2"
+              alt="logoAssomer"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/capnord.png"
-              alt="Image 3"
+              alt="logoCapnord"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/ctm.png"
-              alt="Image 4"
+              alt="logoCtm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/mairie.png"
-              alt="Image 5"
+              alt="logoMairie"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dla.png"
-              alt="Image 6"
+              alt="logoDla"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/crpmem.png"
-              alt="Image 6"
+              alt="logoCrpmem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/efpma.png"
-              alt="Image 6"
+              alt="logoEfpma"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dm.png"
-              alt="Image 6"
+              alt="logoDm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/cea.png"
-              alt="Image 6"
+              alt="logoCea"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="assets/images/logos/ctmseul.png"
-              alt="Image 6"
+              src="assets/images/logos/ifremer.png"
+              alt="logoIfremer"
               class="img-fluid small-image"
             />
           </div>
