--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img
               src="assets/images/logos/logo1.png"
               class="logo-image img-fluid"
-              alt="amp"
+              alt="logoAmp"
             />
           </a>
           <!-- bouton de navigation sur mobile -->
@@ -144,7 +144,7 @@
                     <img
                       src="assets/images/materiels/8.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="casier"
                   /></a>
                 </div>
 
@@ -157,7 +157,7 @@
                     <img
                       src="assets/images/materiels/1.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="filet"
                   /></a>
                 </div>
 
@@ -170,7 +170,7 @@
                     <img
                       src="assets/images/materiels/2.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="dcp"
                   /></a>
                 </div>
 
@@ -183,7 +183,7 @@
                     <img
                       src="assets/images/materiels/4.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="filet"
                   /></a>
                 </div>
 
@@ -196,7 +196,7 @@
                     <img
                       src="assets/images/materiels/5.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="peche"
                   /></a>
                 </div>
 
@@ -209,7 +209,7 @@
                     <img
                       src="assets/images/materiels/3.jpg"
                       class="owl-carousel-image img-fluid"
-                      alt=""
+                      alt="palangre"
                   /></a>
                 </div>
               </div>
@@ -217,14 +217,14 @@
           </div>
           <!-- / .row  -->
           <div id="poisson">
-            <img src="assets/images/logos/1.png" alt="Poisson">                  
+            <img src="assets/images/logos/1.png" alt="Poisson" />
           </div>
         </div>
       </section>
 
       <!--Section mot de bienvenue-->
       <section
-        class="dernieres-news-section section-padding mt-5"
+        class="dernieres-news-section section-padding"
         id="section_2"
       >
         <div class="container">
@@ -238,24 +238,7 @@
             <div class="col-lg-12 col-12 mb-2 mb-lg-2">
               <div class="custom-block d-flex flex-column">
                 <div class="">
-                  <div class="custom-block-icon-wrap">
-                    <div class="section-overlay"></div>
-                    <a
-                      href="assets/images/infos/m1.png"
-                      class="custom-block-image-wrap"
-                      target="_blank"
-                    >
-                      <img
-                        src="assets/images/infos/m1.png"
-                        class="custom-block-image img-fluid"
-                        alt=""
-                      />
-                    </a>
-                  </div>
-                  <div class="mt-2">
-                    <a href="#" class="btn custom-btn"> Président </a>
-                  </div>
-                </div>
+                  
 
                 <div class="custom-block-info">
                   <h5 class="mb-2">
@@ -263,7 +246,7 @@
                   </h5>
 
                   <div class="profile-block d-flex">
-                    <p class="mb-0">
+                    <p class="mb-1">
                       Nous sommes ravis de vous accueillir sur notre plateforme
                       dédiée à la communauté des marins pêcheurs professionnels
                       de Case-pilote. Que vous soyez un membre fidèle de longue
@@ -316,7 +299,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
-              <div class="section-title-wrap mb-5">
+              <div class="section-title-wrap mb-3">
                 <h4 class="section-title">Derniere actualite / info</h4>
               </div>
             </div>
@@ -334,7 +317,7 @@
                       <img
                         src="assets/images/activites/2.jpg"
                         class="custom-block-image img-fluid"
-                        alt=""
+                        alt="reunion"
                       />
                     </a>
                   </div>
@@ -355,7 +338,6 @@
                       <a href="#" class="bi-heart me-1">
                         <span>2.5k</span>
                       </a>
-
                     </div>
 
                     <div class="social-share d-flex flex-column ms-auto">
@@ -408,7 +390,7 @@
                         <img
                           class="pic"
                           src="assets/images/infos/armateur.jpg"
-                          alt=""
+                          alt="armateur"
                         />
                         <ul class="info pt-5">
                           <li class="image-spacing">
@@ -424,7 +406,7 @@
                         <img
                           class="pic"
                           src="assets/images/infos/marin.jpg"
-                          alt=""
+                          alt="marin"
                         />
                         <ul class="info pt-5">
                           <li>
@@ -440,7 +422,7 @@
                         <img
                           class="pic"
                           src="assets/images/infos/urssaf.jpg"
-                          alt=""
+                          alt="urssaf"
                         />
                         <ul class="info pt-5">
                           <li class="image-spacing">
@@ -456,7 +438,7 @@
                         <img
                           class="pic"
                           src="assets/images/infos/formation.jpg"
-                          alt=""
+                          alt="cpf"
                         />
                         <ul class="info pt-5">
                           <li>
@@ -472,7 +454,7 @@
                         <img
                           class="pic"
                           src="assets/images/infos/ssgm.jpg"
-                          alt=""
+                          alt="medical"
                         />
                         <ul class="info pt-5">
                           <li class="image-spacing">
@@ -497,96 +479,96 @@
 
     <!-- TOP -->
     <div id="scroll-to-top-button">
-      <img src="assets/images/logos/top.png" alt="Retour en haut" />
+      <img src="assets/images/logos/top.png" alt="boutonTop" />
     </div>
 
     <!-- FOOTER -->
 
     <footer class="site-footer">
       <!-- partenaires -->
-      <div class="container pb-2">
+      <div class="container pb-4">
         <div class="row">
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/copem.png"
-              alt="Image 1"
+              alt="logoCopem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/logopnm.jpg"
-              alt="Image 6"
+              alt="logoPnm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/assomer.png"
-              alt="Image 2"
+              alt="logoAssomer"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/capnord.png"
-              alt="Image 3"
+              alt="logoCapnord"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/ctm.png"
-              alt="Image 4"
+              alt="logoCtm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/mairie.png"
-              alt="Image 5"
+              alt="logoMairie"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dla.png"
-              alt="Image 6"
+              alt="logoDla"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/crpmem.png"
-              alt="Image 6"
+              alt="logoCrpmem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/efpma.png"
-              alt="Image 6"
+              alt="logoEfpma"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dm.png"
-              alt="Image 6"
+              alt="logoDm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/cea.png"
-              alt="Image 6"
+              alt="logoCea"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="assets/images/logos/ctmseul.png"
-              alt="Image 6"
+              src="assets/images/logos/ifremer.png"
+              alt="logoIfremer"
               class="img-fluid small-image"
             />
           </div>
