--- a/new.html
+++ b/new.html
@@ -34,7 +34,7 @@
                 ><img
                   src="assets/images/logos/logo1.png"
                   alt="Logo de l'association"
-                  class="association-logo"
+                  class="logoAmp"
               /></a>
               <h2 class="loginTitle-text">Création de Compte</h2>
               <p class="user-email">Inscrivez-vous sur notre plateforme</p>
