--- a/privacy.html
+++ b/privacy.html
@@ -27,7 +27,7 @@
           <div class="container">
               <!-- Logo  -->
               <a class="navbar-brand me-lg-5 me-0" href="index.html">
-                  <img src="assets/images/logos/logo1.png" class="logo-image img-fluid" alt="amp">
+                  <img src="assets/images/logos/logo1.png" class="logo-image img-fluid" alt="logoAmp">
               </a>
               <!-- bouton de navigation sur mobile -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -99,12 +99,12 @@
 
 
     <!-- Politique -->
-    <div class="ex-basic-1 pb-5">
+    <div class="ex-basic-1">
       <div class="container">
         <div class="row">
             <div class="col-xl-10 offset-xl-1">
-              <p class="mb-5">Dernière mise à jour : 20 septembre 2023</p>
-              <p class="mb-5">
+              <p class="mb-3">Dernière mise à jour : 10 octobre 2023</p>
+              <p class="mb-3">
                 La présente Politique de Confidentialité explique comment l'association des marins pilotins
                 collecte, utilise, protège et partage vos informations personnelles lorsque
                 vous utilisez notre site web et nos services. En utilisant le site Web de l'association des marins pilotins, vous
@@ -113,13 +113,13 @@
               </p>
 
     <h3>Collecte des Informations</h3>
-    <p class="mt-3 mb-5">
+    <p class="pb-1">
       <h5><strong>Informations Personnelles Collectées</strong></h5><br>
       Lorsque vous utilisez notre site web, nous pouvons collecter les types
       d'informations personnelles suivants :
     </p>
     <ul class="list-unstyled li-space-lg">
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
           <strong>Informations d'Identification :</strong> Votre nom, prénom,
@@ -156,171 +156,171 @@
       </li>
     </ul>
 
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Méthodes de Collecte</strong></h5><br>
       Nous pouvons collecter des informations personnelles de différentes manières,
-      notamment lorsque vous :
+      notamment lorsque :
     </p>
     <ul class="list-unstyled li-space-lg">
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Vous inscrivez sur notre site web.
+          - Vous vous inscrivez sur notre site web.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Utilisez nos services ou soumettez des demandes de service.
+          - Vous utilisez nos services ou soumettez des demandes de service.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Communiquez avec nous par e-mail, chat en direct ou tout autre moyen de communication.
+          - Vous communiquez avec nous par e-mail, chat en direct ou tout autre moyen de communication.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Interagissez avec notre site web en utilisant des cookies et des technologies similaires (consultez notre Politique de Cookies pour plus d'informations).
+          - Vous interagissez avec notre site web en utilisant des cookies et des technologies similaires (consultez notre Politique de Cookies pour plus d'informations).
         </div>
       </li>
     </ul>
 
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Utilisation des Informations</strong></h5><br>
       Nous utilisons les informations personnelles que nous collectons pour les finalités suivantes :
     </p>
     <ul class="list-unstyled li-space-lg">
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Fournir nos services administratifs et d'aide numérique.
+          - Fournir nos services administratifs et d'aide numérique.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Traiter vos demandes de service et répondre à vos questions.
+          - Traiter vos demandes de service et répondre à vos questions.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Gérer votre compte utilisateur et vous fournir un accès à votre profil.
+          - Gérer votre compte utilisateur et vous fournir un accès à votre profil.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Améliorer et personnaliser votre expérience utilisateur.
+          - Améliorer et personnaliser votre expérience utilisateur.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Communiquer avec vous concernant les mises à jour, les offres spéciales et les informations importantes relatives à nos services.
+          - Communiquer avec vous concernant les mises à jour, les offres spéciales et les informations importantes relatives à nos services.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Assurer la sécurité et l'intégrité de notre site web et de nos services.
+          - Assurer la sécurité et l'intégrité de notre site web et de nos services.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Se conformer aux lois et aux réglementations applicables.
+          - Se conformer aux lois et aux réglementations applicables.
         </div>
       </li>
     </ul>
 
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Partage des Informations</strong></h5><br>
       Nous ne vendons pas, ne louons pas et ne divulguons pas vos informations personnelles à des tiers, sauf dans les circonstances suivantes :
     </p>
     <ul class="list-unstyled li-space-lg">
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Avec votre consentement explicite.
+          - Avec votre consentement explicite.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Avec nos prestataires de services tiers qui nous aident à fournir nos services (par exemple, des services d'hébergement web, des services de paiement, etc.).
+          - Avec nos prestataires de services tiers qui nous aident à fournir nos services (par exemple, des services d'hébergement web, des services de paiement, etc.).
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Pour répondre à des obligations légales, telles que les demandes gouvernementales ou les ordonnances judiciaires.
+          - Pour répondre à des obligations légales, telles que les demandes gouvernementales ou les ordonnances judiciaires.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Pour protéger nos droits, notre confidentialité, notre sécurité ou notre propriété, ainsi que ceux de nos utilisateurs.
+          - Pour protéger nos droits, notre confidentialité, notre sécurité ou notre propriété, ainsi que ceux de nos utilisateurs.
         </div>
       </li>
     </ul>
 
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Sécurité des Données</strong></h5><br>
       Nous prenons des mesures de sécurité appropriées pour protéger vos informations personnelles contre tout accès non autorisé, toute utilisation abusive, toute perte ou toute divulgation.
     </p>
  
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Vos Choix et Vos Droits</strong></h5><br>
       Vous avez le droit de :
     </p>
     <ul class="list-unstyled li-space-lg">
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Accéder à vos informations personnelles que nous détenons.
+          - Accéder à vos informations personnelles que nous détenons.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Demander la rectification de toute information incorrecte ou incomplète.
+          - Demander la rectification de toute information incorrecte ou incomplète.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Demander la suppression de vos informations personnelles.
+          - Demander la suppression de vos informations personnelles.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Vous opposer au traitement de vos informations personnelles.
+          - Vous opposer au traitement de vos informations personnelles.
         </div>
       </li>
-      <li class="d-flex pb-2">
+      <li class="d-flex">
         <i class="fas fa-square"></i>
         <div class="flex-grow-1">
-          Retirer votre consentement si vous l'avez donné précédemment.
+          - Retirer votre consentement si vous l'avez donné précédemment.
         </div>
       </li>
     </ul>
 
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Modification de Notre Politique de Confidentialité</strong></h5><br>
       Nous pouvons mettre à jour cette Politique de Confidentialité périodiquement pour refléter les changements dans nos pratiques de collecte et de traitement des données. Nous vous informerons de toute modification importante en affichant un avis sur notre site web.
     </p>
     
-    <p class="mb-5">
+    <p class="pb-1">
       <h5><strong>Nous Contacter</strong></h5><br>
       Si vous avez des questions, des préoccupations ou des demandes concernant cette Politique de Confidentialité, veuillez nous contacter :
     </p><br>
     <p>
-      <a href="contact.html" class="btn custom-btn smoothscroll mt-3">Nous contacter</a>
+      <a href="contact.html" class="btn custom-btn smoothscroll mt-1">Nous contacter</a>
     </p>              
             </div><!-- /col -->
           </div><!-- /col -->
@@ -331,7 +331,7 @@
 
     <!-- TOP -->
     <div id="scroll-to-top-button">
-      <img src="assets/images/logos/top.png" alt="Retour en haut" />
+      <img src="assets/images/logos/top.png" alt="boutonTop" />
     </div>
 
   
@@ -344,49 +344,49 @@
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/copem.png"
-            alt="Image 1"
+            alt="logoCopem"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/logopnm.jpg"
-            alt="Image 6"
+            alt="logoPnm"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/assomer.png"
-            alt="Image 2"
+            alt="logoAssomer"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/capnord.png"
-            alt="Image 3"
+            alt="logoCapnord"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/ctm.png"
-            alt="Image 4"
+            alt="logoCtm"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/mairie.png"
-            alt="Image 5"
+            alt="logoMairie"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/dla.png"
-            alt="Image 6"
+            alt="logoDla"
             class="img-fluid small-image"
           />
         </div>
@@ -400,28 +400,28 @@
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/efpma.png"
-            alt="Image 6"
+            alt="logoCrpmem"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/dm.png"
-            alt="Image 6"
+            alt="logoDm"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="assets/images/logos/cea.png"
-            alt="Image 6"
+            alt="logoCea"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
-            src="assets/images/logos/ctmseul.png"
-            alt="Image 6"
+            src="assets/images/logos/ifremer.png"
+            alt="logoIfremer"
             class="img-fluid small-image"
           />
         </div>
