--- a/reset.html
+++ b/reset.html
@@ -34,7 +34,7 @@
                 ><img
                   src="assets/images/logos/logo1.png"
                   alt="Logo de l'association"
-                  class="association-logo"
+                  class="logoAmp"
               /></a>
               <h2 class="loginTitle-text">Récupération de compte</h2>
             </div>
