--- a/terms.html
+++ b/terms.html
@@ -35,7 +35,7 @@
           <img
             src="assets/images/logos/logo1.png"
             class="logo-image img-fluid"
-            alt="amp"
+            alt="logoAmp"
           />
         </a>
         <!-- bouton de navigation sur mobile -->
@@ -126,7 +126,7 @@
         </div>
         <!-- / .row  -->
         <div id="poisson">
-          <img src="assets/images/logos/1.png" alt="Poisson">                  
+          <img src="assets/images/logos/1.png" alt="Poisson" />
         </div>
       </div>
     </section>
@@ -136,41 +136,41 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-10 offset-xl-1">
-            <h2 class="mt-5 mb-3">Termes et Conditions</h2>
-            <p class="mb-5">Dernière mise à jour : 20 septembre 2023</p>
-            <p class="mb-5">
+            <h2 class="mb-3">Termes et Conditions</h2>
+            <p class="mb-3">Dernière mise à jour : 10 octobre 2023</p>
+            <p class="mb-4">
               Bienvenue sur le site Web <strong>AMP</strong>. En utilisant le
-              Site Web, vous acceptez de vous conformer à ces Conditions
+              Site Web, vous acceptez de vous conformer à ces conditions
               d'Utilisation. <br />Si vous n'acceptez pas ces conditions,
               veuillez ne pas utiliser le Site Web.
             </p>
 
             <h5 class="mb-3">1. Utilisation du Site Web</h5>
             <ul class="list-unstyled li-space-lg">
-              <li class="d-flex pb-2">
+              <li class="d-flex">
                 <i class="fas fa-square"></i>
                 <div class="flex-grow-1">
-                  Vous devez avoir au moins 18 ans pour utiliser ce Site Web.
+                  - Vous devez avoir au moins 18 ans pour utiliser ce Site Web.
                 </div>
               </li>
-              <li class="d-flex pb-2">
+              <li class="d-flex">
                 <i class="fas fa-square"></i>
                 <div class="flex-grow-1">
-                  Vous acceptez de ne pas utiliser le Site Web à des fins
+                  - Vous acceptez de ne pas utiliser le Site Web à des fins
                   illégales ou interdites par la loi.
                 </div>
               </li>
-              <li class="d-flex pb-2">
+              <li class="d-flex">
                 <i class="fas fa-square"></i>
                 <div class="flex-grow-1">
-                  Vous acceptez de ne pas interférer avec le bon fonctionnement
-                  du Site Web.
+                  - Vous acceptez de ne pas interférer avec le bon
+                  fonctionnement du Site Web.
                 </div>
               </li>
-              <li class="d-flex pb-5">
+              <li class="d-flex pb-3">
                 <i class="fas fa-square"></i>
                 <div class="flex-grow-1">
-                  Vous acceptez de ne pas collecter ou recueillir des
+                  - Vous acceptez de ne pas collecter ou recueillir des
                   informations personnelles d'autres utilisateurs du Site Web
                   sans leur consentement.
                 </div>
@@ -178,23 +178,22 @@
             </ul>
 
             <h5 class="mb-3">2. Contenu du Site Web</h5>
-            <p class="mb-5">
+            <p class="mb-4">
               Le contenu du Site Web est fourni à titre informatif uniquement.
               Nous ne garantissons pas l'exactitude, l'exhaustivité ou la
-              pertinence du contenu.
-              <br />Nous nous réservons le droit de modifier ou de supprimer
-              tout contenu du Site Web à tout moment sans préavis.
+              pertinence du contenu. Nous nous réservons le droit de modifier ou
+              de supprimer tout contenu du Site Web à tout moment sans préavis.
             </p>
 
             <h5 class="mb-3">3. Liens vers les niveaux des sites</h5>
-            <p class="mb-5">
+            <p class="mb-4">
               Le Site Web peut contenir des liens vers des sites web de tiers.
               <br />Nous ne sommes pas responsables du contenu ou de la
               politique de confidentialité de ces sites web.
             </p>
 
             <h5 class="mb-3">4. Propriété Intellectuelle</h5>
-            <p class="mb-5">
+            <p class="mb-4">
               Tout le contenu du Site Web, y compris mais sans s'y limiter, les
               textes, les images, les vidéos, les logos, les marques de
               commerce, est protégé par les lois sur les droits d'auteur et les
@@ -205,7 +204,7 @@
             </p>
 
             <h5 class="mb-3">5. Limitation de responsabilité</h5>
-            <p class="mb-5">
+            <p class="mb-4">
               En utilisant le Site Web, vous acceptez de le faire à vos propres
               risques. <br />
               Nous ne serons pas responsables des dommages directs, indirects,
@@ -215,7 +214,7 @@
             </p>
 
             <h5 class="mb-3">6. Modification des Conditions d'Utilisation</h5>
-            <p class="mb-5">
+            <p class="mb-4">
               Nous nous réservons le droit de modifier ces Conditions
               d'Utilisation à tout moment. Les modifications seront effectives
               dès leur publication sur le Site Web. <br />
@@ -224,7 +223,7 @@
             </p>
 
             <h5 class="mb-3">7. Loi applicable</h5>
-            <p class="mb-5">
+            <p class="mb-4">
               Nous nous réservons le droit de modifier ces Conditions
               d'Utilisation à tout moment. Les modifications seront effectives
               dès leur publication sur le Site Web. <br />
@@ -233,14 +232,14 @@
             </p>
 
             <h5 class="mb-3">Nous Contacter</h5>
-            <p class="mb-5">
+            <p class="mb-1">
               Si vous avez des questions, des préoccupations ou des demandes
               concernant cette Politique de Confidentialité, veuillez nous
               contacter :
             </p>
             <br />
             <p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-3"
+              <a href="contact.html" class="btn custom-btn smoothscroll mt-1"
                 >Nous contacter</a
               >
             </p>
@@ -255,96 +254,96 @@
 
     <!-- TOP -->
     <div id="scroll-to-top-button">
-      <img src="assets/images/logos/top.png" alt="Retour en haut" />
+      <img src="assets/images/logos/top.png" alt="boutonTop" />
     </div>
 
     <!-- FOOTER -->
 
     <footer class="site-footer">
       <!-- partenaires -->
-      <div class="container pb-2">
+      <div class="container pb-4">
         <div class="row">
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/copem.png"
-              alt="Image 1"
+              alt="logoCopem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/logopnm.jpg"
-              alt="Image 6"
+              alt="logoPnm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/assomer.png"
-              alt="Image 2"
+              alt="logoAssomer"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/capnord.png"
-              alt="Image 3"
+              alt="logoCapnord"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/ctm.png"
-              alt="Image 4"
+              alt="logoCtm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/mairie.png"
-              alt="Image 5"
+              alt="logoMairie"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dla.png"
-              alt="Image 6"
+              alt="logoDla"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/crpmem.png"
-              alt="Image 6"
+              alt="logoCrpmem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/efpma.png"
-              alt="Image 6"
+              alt="logoEfpma"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dm.png"
-              alt="Image 6"
+              alt="logoDm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/cea.png"
-              alt="Image 6"
+              alt="logoCea"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="assets/images/logos/ctmseul.png"
-              alt="Image 6"
+              src="assets/images/logos/ifremer.png"
+              alt="logoIfremer"
               class="img-fluid small-image"
             />
           </div>
