--- a/activites.html
+++ b/activites.html
@@ -37,7 +37,7 @@
             <img
               src="assets/images/logos/logo1.png"
               class="logo-image img-fluid"
-              alt="amp"
+              alt="logoAmp"
             />
           </a>
           <!-- bouton de navigation sur mobile -->
@@ -159,7 +159,7 @@
                     <img
                       src="assets/images/actions/11.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="sensibilisation"
                     />
                   </a>
                 </div>
@@ -192,7 +192,6 @@
                   <a href="#" class="badge ms-auto">
                     <i class="bi-heart"></i>
                   </a>
-
                 </div>
               </div>
             </div>
@@ -201,14 +200,14 @@
               <div class="custom-block custom-block-full">
                 <div class="custom-block-image-wrap">
                   <a
-                    href="assets/images/actions/13.jpg"
+                    href="assets/images/materiels/13.jpg"
                     class="custom-block-image-wrap"
                     target="_blank"
                   >
                     <img
-                      src="assets/images/actions/13.jpg"
+                      src="assets/images/materiels/13.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="aquaculture"
                     />
                   </a>
                 </div>
@@ -233,7 +232,6 @@
                     <a href="#" class="bi-heart me-1">
                       <span>2.5k</span>
                     </a>
-
                   </div>
                 </div>
 
@@ -249,14 +247,14 @@
               <div class="custom-block custom-block-full">
                 <div class="custom-block-image-wrap">
                   <a
-                    href="assets/images/materiels/13.jpg"
+                    href="assets/images/materiels/DCP.png"
                     class="custom-block-image-wrap"
                     target="_blank"
                   >
                     <img
-                      src="assets/images/materiels/13.jpg"
+                      src="assets/images/materiels/DCP.png"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="dcpExperimental"
                     />
                   </a>
                 </div>
@@ -330,7 +328,7 @@
                     <img
                       src="assets/images/infos/pro.png"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="atelier"
                     />
                   </a>
                 </div>
@@ -376,7 +374,7 @@
                     <img
                       src="assets/images/actions/15.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="promotion"
                     />
                   </a>
                 </div>
@@ -424,7 +422,7 @@
                     <img
                       src="assets/images/actions/12.jpg"
                       class="custom-block-image img-fluid"
-                      alt=""
+                      alt="campagne"
                     />
                   </a>
                 </div>
@@ -468,95 +466,95 @@
 
     <!-- TOP -->
     <div id="scroll-to-top-button">
-      <img src="assets/images/logos/top.png" alt="Retour en haut" />
+      <img src="assets/images/logos/top.png" alt="boutonTop" />
     </div>
 
     <!-- FOOTER -->
     <footer class="site-footer">
       <!-- partenaires -->
-      <div class="container pb-2">
+      <div class="container pb-4">
         <div class="row">
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/copem.png"
-              alt="Image 1"
+              alt="logoCopem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/logopnm.jpg"
-              alt="Image 6"
+              alt="logoPnm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/assomer.png"
-              alt="Image 2"
+              alt="logoAssomer"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/capnord.png"
-              alt="Image 3"
+              alt="logoCapnord"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/ctm.png"
-              alt="Image 4"
+              alt="logoCtm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/mairie.png"
-              alt="Image 5"
+              alt="logoMairie"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dla.png"
-              alt="Image 6"
+              alt="logoDla"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/crpmem.png"
-              alt="Image 6"
+              alt="logoCrpmem"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/efpma.png"
-              alt="Image 6"
+              alt="logoEfpma"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/dm.png"
-              alt="Image 6"
+              alt="logoDm"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="assets/images/logos/cea.png"
-              alt="Image 6"
+              alt="logoCea"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="assets/images/logos/ctmseul.png"
-              alt="Image 6"
+              src="assets/images/logos/ifremer.png"
+              alt="logoIfremer"
               class="img-fluid small-image"
             />
           </div>
