--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                 ><img
                   src="assets/images/logos/logo1.png"
                   alt="Logo de l'association"
-                  class="association-logo"
+                  class="logoAmp"
               /></a>
 
               <h2 class="loginTitle-text">Connexion</h2>
